<resources>
    <string name="app_name">天下灯仓</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMNotNow">取消</string>
    <string name="down_waiting">正在下载安装包,请稍后</string>
    <string name="download_cancel">下载取消</string>
    <string name="UMLatestVersion">已是最新版本</string>
    <string name="all">全部</string>
    <string name="frag_product">分类检索</string>
    <string name="frag_select">组合筛选</string>
    <string name="frag_match">配灯</string>
    <string name="frag_cart">购物车</string>
    <string name="frag_mine">我的</string>
    <string name="popularity">综合</string>
    <string name="price">价格</string>
    <string name="new_goods">上新</string>
    <string name="sale">销量</string>
    <string name="product">商品</string>
    <string name="detail">详情</string>
    <string name="parameter">推荐</string>
    <string name="goods_detail">商品详情</string>
    <string name="customer_service">客服</string>
    <string name="shopping_cart">购物车</string>
    <string name="go_shopping_cart">加入购物车</string>
    <string name="number">数量</string>
    <string name="phone_hint">请输入手机号码</string>
    <string name="timer_send_re">重新发送</string>
    <string name="timer_sending">发送中...</string>
    <string name="code_get_hint">%ss 后重试</string>
    <string name="isnull_accounts">帐号不能为空</string>
    <string name="isnull_phone">手机号码不能为空</string>
    <string name="isnull_pwd">密码不能为空</string>
    <string name="isnull_affirm_pwd">确认密码不能为空</string>
    <string name="isnull_invitation_code">邀请码不能为空</string>
    <string name="isnull_verification_code">验证码不能为空</string>
    <string name="compare_pwd_affirm">两次输入的密码不一致</string>
    <string name="mobile_assert">请填写正确的手机号</string>
    <string name="back_desktop">再按一次退出系统</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="him_title">请输入您的标题</string>
    <string name="scene_database">场景库</string>
    <string name="goPhotograph">拍照</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_crop_image">CropImageActivity</string>

    <string name="ucrop_label_original">原始比例</string>
    <string name="ucrop_label_edit_photo">裁剪</string>

    <string name="ucrop_menu_crop">裁剪</string>
    <string name="ucrop_error_input_data_is_absent">Both input and output Uri must be specified</string>
    <string name="title_activity_web_view_home">WebViewHomeActivity</string>
    <string name="comment">晒图有礼</string>

    <string name="activity_name_ble_scan">蓝牙扫描</string>

    <string name="menu_event_dispatcher_clear">清空</string>
    <string name="cancel">取消</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="logistic_type">选择物流公司</string>
    <string name="defaults_address">默认地址</string>
    <string name="detele">删除</string>
    <string name="my_logistics">我的物流</string>
    <string name="add_logistics">自定义物流</string>
    <string name="logistics_name">请输入物流公司的名称</string>
    <string name="logistics_phone">请输入物流联系电话</string>
    <string name="logistics_address">请输入物流地址</string>
    <string name="save">保存</string>

</resources>
