<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_rl"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/main_ll">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >
                <androidx.viewpager.widget.ViewPager
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/container_vp" >
                </androidx.viewpager.widget.ViewPager>
                <RelativeLayout
                    android:id="@+id/rl_pro_top"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <ImageView
                        android:onClick="goBack"
                        android:background="@mipmap/nav_arrow"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_width="28dp"
                        android:layout_height="28dp" />
                    <ImageView
                        android:id="@+id/iv_share"
                        android:background="@mipmap/nav_share_trans"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:layout_width="28dp"
                        android:layout_height="28dp" />

                </RelativeLayout>
                <LinearLayout
                    android:background="#ffffff"
                    android:id="@+id/ll_pro_top"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">
                    <View
                        android:background="#ffffff"
                        android:layout_width="match_parent"
                        android:layout_height="15dp"/>
                <LinearLayout
                    android:background="#ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:onClick="goBack">
                        <ImageView
                            android:id="@+id/topLeftBtn"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="5dp"
                            android:background="@mipmap/goback_black"
                            android:textColor="#FFFFFF"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <LinearLayout
                            android:id="@+id/product_ll"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:visibility="visible">

                            <TextView
                                android:id="@+id/product_tv"
                                android:layout_width="70dp"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:textColor="@color/theme_red"
                                android:text="@string/product"
                                android:textSize="15sp" />

                            <View
                                android:id="@+id/product_view"
                                android:layout_width="30dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_height="2dp"
                                android:background="@color/theme_red"
                                android:visibility="visible"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/detail_ll"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:visibility="visible">

                            <TextView
                                android:id="@+id/detail_tv"
                                android:layout_width="70dp"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:textColor="@color/txt_black"
                                android:text="@string/detail"
                                android:textSize="15sp"  />

                            <View
                                android:id="@+id/detail_view"
                                android:layout_width="30dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_height="2dp"
                                android:background="@color/theme_red"
                                android:visibility="gone"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/tuijian_ll"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:visibility="visible">

                            <TextView
                                android:id="@+id/tuijian_tv"
                                android:layout_width="70dp"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:textColor="@color/txt_black"
                                android:text="推荐"
                                android:textSize="15sp"  />
                            <View
                                android:id="@+id/tuijian_view"
                                android:layout_width="30dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_height="2dp"
                                android:background="@color/theme_red"
                                android:visibility="gone"/>
                        </LinearLayout>
                        <LinearLayout

                            android:id="@+id/parament_ll"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_centerHorizontal="true"
                            android:orientation="vertical"
                            android:visibility="gone"
                            >

                            <TextView
                                android:id="@+id/parament_tv"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:textColor="@color/txt_black"
                                android:text="@string/parameter"
                                android:textSize="17sp" />

                            <View
                                android:id="@+id/parament_view"
                                android:layout_width="80dp"
                                android:layout_height="2dp"
                                android:background="#F33F3F"
                                android:visibility="invisible" />
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/sun_image_ll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone"
                            >

                            <TextView
                                android:id="@+id/sun_image_tv"
                                android:layout_width="70dp"
                                android:layout_height="30dp"
                                android:gravity="center"
                                android:textColor="@color/txt_black"
                                android:background="@drawable/bg_goods_detail_intro_corner_right_normal"
                                android:textSize="17sp"
                                android:text="晒家"
                                />
                            <View
                                android:id="@+id/sun_image_view"
                                android:layout_width="80dp"
                                android:layout_height="2dp"
                                android:background="#F33F3F"
                                android:visibility="gone"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/title_ll"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_centerHorizontal="true"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/title_tv"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:textColor="@color/txt_black"
                                android:text="@string/goods_detail"
                                android:textSize="17sp" />
                        </LinearLayout>
                    </LinearLayout>
                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/iv_home"
                        android:src="@mipmap/nav_home"
                        android:layout_width="23dp"
                        android:layout_height="21dp" />
                    <ImageView
                        android:id="@+id/share_iv"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_centerInParent="true"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/nav_share"
                        />
                </LinearLayout>
                </LinearLayout>
            </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lines" />
        <LinearLayout
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:id="@+id/callLl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/content_icon_service_default" />

                <TextView
                    android:textSize="10sp"
                    android:layout_marginTop="3dp"
                    android:textColor="#666666"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_service" />

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/shopping_cart_Ll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:id="@+id/collectIv"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/content_icon_shop_default" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/collectIv"
                        android:textSize="10sp"
                        android:layout_marginTop="3dp"
                        android:textColor="#666666"
                        android:layout_centerHorizontal="true"
                        android:text="@string/shopping_cart" />
                </LinearLayout>

                <TextView
                    android:id="@+id/unMessageReadTv"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/bg_unread_count_red"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="11sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:visibility="invisible"
                    />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/go_photo_Ll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/go_photoIv"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/content_icon_palette_default" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:layout_marginTop="3dp"
                    android:textColor="#666666"
                    android:text="设计大师" />

            </LinearLayout>


            <Button
                android:id="@+id/toDiyBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.4"
                android:visibility="gone"
                android:background="@color/theme_red"
                android:text="配配看"
                android:textColor="@color/white" />
            <View
                android:background="#dddddd"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/toCartBtn"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_red_orange"
                android:text="@string/go_shopping_cart"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/toBuyBtn"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_red"
                android:text="立即购买"
                android:textColor="#ffffff" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>